resources/monitoring/grafana/base/grafana/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
  - name: global-gateway
    namespace: global-gateway
    sectionName: global-http-gw
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /monitoring/grafana
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /monitoring/grafana
    backendRefs:
    - name: grafana
      port: 80
